# digitalmarketingagent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  MVP_ROADMAP.md  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260630_0001_product_intelligence_memory.py
apps/api/src/marketing_agent/: __init__.py  cli.py  config.py  logging.py  main.py
apps/api/src/marketing_agent/api/: dependencies.py  errors.py  security.py
apps/api/src/marketing_agent/api/routes/: admin_db.py  analyses.py  perception.py
apps/api/src/marketing_agent/application/commands/: analyze_product.py
apps/api/src/marketing_agent/application/orchestration/: perception_pipeline.py
apps/api/src/marketing_agent/domain/models/: analysis_memory.py  evidence.py  keyword.py  marketplace.py  product.py  provider.py  run.py
apps/api/src/marketing_agent/domain/ports/: artifact_repository.py  keyword_data_provider.py  keyword_metrics_cache.py  marketplace_data_provider.py  perception_provider.py
apps/api/src/marketing_agent/domain/services/: evidence_validator.py  (+10 more)
apps/api/src/marketing_agent/observability/: metrics.py  tracing.py
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_openapi.py  test_provider_contract.py
apps/api/tests/integration/: test_api.py  test_cli.py  test_marketplace_provider.py  test_migrations.py  test_persistence_api.py
apps/api/tests/unit/: test_evidence_validation.py  test_image_validation.py  test_keyword_processing.py  test_product_matcher.py
(+87 files in other folders)
