[project]
name = "marketing-agent"
version = "0.1.0"
description = "Product perception and keyword intelligence API"
readme = "../../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.84.0",
  "pillow>=10.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
marketing-agent = "marketing_agent.cli:app"

[dependency-groups]
dev = [
  "asgi-lifespan>=2.1.0",
  "coverage>=7.6.0",
  "openapi-spec-validator>=0.7.1",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

